--- a/images/build
+++ b/images/build
@@ -38,7 +38,7 @@ function destroy {
   local image="${1}"
 
   # Append the version tag (e.g. 'alpha2' or '1.0') of the Docker images
-  local image_version="$cdh5_version-$image_classifier"
+  local image_version="$cdh5_version-$image_patch"
 
   echo "Removing Docker image ${repository}/${image}:${image_version}"
   docker image rm --force ${registry}/${repository}/${image}:${image_version} > /dev/null 2>&1
@@ -51,7 +51,7 @@ function build {
   local image="${1}"
 
   # Append the version tag (e.g. 'alpha2' or '1.0') of the Docker images
-  local image_version="$cdh5_version-$image_classifier"
+  local image_version="$cdh5_version-$image_patch"
 
   if [[ "${image}" == "base" ]]; then cat <<CAT > ${selfdir}/base/cdh-${cdh5_version}.repo
 [cdh-${cdh5_version}]
