--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,29 +7,32 @@
 
 version: "3.7"
 
+
+volumes:
+  shared:
+
+
 networks:
   docker-net:
     name: "docker.net"
+
 
 services:
   kdc:
     image: "$registry/$repository/kdc:$image_version"
     hostname: "kdc.docker.net"
-    container_name: "kdc"
     networks:
       - docker-net
     ports:
       - "4088:4088"
       - "4088:4088/udp"
     volumes:
-      - "$mount/conf:/mount/conf"
-      - "$mount/secrets:/mount/secrets"
+      - "shared:/shared"
 
 
   namenode:
     image: "$registry/$repository/hadoop-hdfs/namenode:$image_version"
     hostname: "namenode.docker.net"
-    container_name: "namenode"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
       SASL_PROTECTION: "$sasl_protection"
@@ -41,8 +44,7 @@ services:
       - "8020:8020"   # protobuf
       #- "5051:5051"  # jvm-debug
     volumes:
-      - "$mount/conf:/mount/conf"
-      - "$mount/secrets:/mount/secrets"
+      - "shared:/shared"
     depends_on:
       - kdc
 
@@ -50,7 +52,6 @@ services:
   datanode1:
     image: "$registry/$repository/hadoop-hdfs/datanode:$image_version"
     hostname: "datanode1.docker.net"
-    container_name: "datanode1"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
       SASL_PROTECTION: "$sasl_protection"
@@ -66,95 +67,91 @@ services:
       - "1006:1006"   # http
       #- "5052:5052"  # jvm-debug
     volumes:
-      - "$mount/secrets:/mount/secrets"
+      - "shared:/shared"
     depends_on:
       - namenode
 
-
-  jobhistory:
-    image: "$registry/$repository/hadoop-mapred/jobhistory:$image_version"
-    hostname: "jobhistory.docker.net"
-    container_name: "jobhistory"
-    environment:
-      HADOOP_AUTHENTICATION: "$hadoop_auth"
-      SASL_PROTECTION: "$sasl_protection"
-      TLS_ENCRYPTION: "$tls_encryption"
-    networks:
-      - docker-net
-    ports:
-      - "19888:19888" # http      (yarn-ui)
-      - "10020:10020" # protobuf
-      #- "5053:5053"  # jvm-debug
-    volumes:
-      - "$mount/conf:/mount/conf"
-      - "$mount/secrets:/mount/secrets"
-    depends_on:
-      - namenode
-
-
-  resourcemanager:
-    image: "$registry/$repository/hadoop-yarn/resourcemanager:$image_version"
-    hostname: "resourcemanager.docker.net"
-    container_name: "resourcemanager"
-    environment:
-      HADOOP_AUTHENTICATION: "$hadoop_auth"
-      SASL_PROTECTION: "$sasl_protection"
-      TLS_ENCRYPTION: "$tls_encryption"
-    networks:
-      - docker-net
-    ports:
-      - "8088:8088"   # http      (yarn-ui)
-      - "8032:8032"   # protobuf
-      - "8030:8030"   # protobuf
-      #- "5054:5054"  # jvm-debug
-    volumes:
-      - "$mount/conf:/mount/conf"
-      - "$mount/secrets:/mount/secrets"
-    depends_on:
-      - namenode
-      - jobhistory
-
-
-  nodemanager1:
-    image: "$registry/$repository/hadoop-yarn/nodemanager:$image_version"
-    hostname: "nodemanager1.docker.net"
-    container_name: "nodemanager1"
-    environment:
-      HADOOP_AUTHENTICATION: "$hadoop_auth"
-      SASL_PROTECTION: "$sasl_protection"
-      TLS_ENCRYPTION: "$tls_encryption"
-    networks:
-      - docker-net
-    ports:
-      - "8041:8041"   # protobuf
-      - "8042:8042"   # http     (yarn-ui)
-      - "8043:8043"   # protobuf (map-reduce-AM)
-      - "4041:4040"   # http     (spark-ui)
-      #- "5055:5055"  # jvm-debug
-    volumes:
-      - "$mount/secrets:/mount/secrets"
-    depends_on:
-      - namenode
-      - jobhistory
-      - resourcemanager
-
-
-  hive:
-    image: "$registry/$repository/hive:$image_version"
-    hostname: "hive.docker.net"
-    container_name: "hive"
-    environment:
-      HADOOP_AUTHENTICATION: "$hadoop_auth"
-      SASL_PROTECTION: "$sasl_protection"
-      TLS_ENCRYPTION: "$tls_encryption"
-    networks:
-      - docker-net
-    ports:
-      - "10000:10000" # jdbc
-      #- "5056:5056"  # jvm-debug
-    volumes:
-      - "$mount/conf:/mount/conf"
-      - "$mount/secrets:/mount/secrets"
-    depends_on:
-      - namenode
-      - resourcemanager
+  #
+  # jobhistory:
+  #   image: "$registry/$repository/hadoop-mapred/jobhistory:$image_version"
+  #   hostname: "jobhistory.docker.net"
+  #   environment:
+  #     HADOOP_AUTHENTICATION: "$hadoop_auth"
+  #     SASL_PROTECTION: "$sasl_protection"
+  #     TLS_ENCRYPTION: "$tls_encryption"
+  #   networks:
+  #     - docker-net
+  #   ports:
+  #     - "19888:19888" # http      (yarn-ui)
+  #     - "10020:10020" # protobuf
+  #     #- "5053:5053"  # jvm-debug
+  #   volumes:
+  #     - "$mount/conf:/mount/conf"
+  #     - "$mount/secrets:/mount/secrets"
+  #   depends_on:
+  #     - namenode
+  #
+  #
+  # resourcemanager:
+  #   image: "$registry/$repository/hadoop-yarn/resourcemanager:$image_version"
+  #   hostname: "resourcemanager.docker.net"
+  #   environment:
+  #     HADOOP_AUTHENTICATION: "$hadoop_auth"
+  #     SASL_PROTECTION: "$sasl_protection"
+  #     TLS_ENCRYPTION: "$tls_encryption"
+  #   networks:
+  #     - docker-net
+  #   ports:
+  #     - "8088:8088"   # http      (yarn-ui)
+  #     - "8032:8032"   # protobuf
+  #     - "8030:8030"   # protobuf
+  #     #- "5054:5054"  # jvm-debug
+  #   volumes:
+  #     - "$mount/conf:/mount/conf"
+  #     - "$mount/secrets:/mount/secrets"
+  #   depends_on:
+  #     - namenode
+  #     - jobhistory
+  #
+  #
+  # nodemanager1:
+  #   image: "$registry/$repository/hadoop-yarn/nodemanager:$image_version"
+  #   hostname: "nodemanager1.docker.net"
+  #   environment:
+  #     HADOOP_AUTHENTICATION: "$hadoop_auth"
+  #     SASL_PROTECTION: "$sasl_protection"
+  #     TLS_ENCRYPTION: "$tls_encryption"
+  #   networks:
+  #     - docker-net
+  #   ports:
+  #     - "8041:8041"   # protobuf
+  #     - "8042:8042"   # http     (yarn-ui)
+  #     - "8043:8043"   # protobuf (map-reduce-AM)
+  #     - "4041:4040"   # http     (spark-ui)
+  #     #- "5055:5055"  # jvm-debug
+  #   volumes:
+  #     - "$mount/secrets:/mount/secrets"
+  #   depends_on:
+  #     - namenode
+  #     - jobhistory
+  #     - resourcemanager
+  #
+  #
+  # hive:
+  #   image: "$registry/$repository/hive:$image_version"
+  #   hostname: "hive.docker.net"
+  #   environment:
+  #     HADOOP_AUTHENTICATION: "$hadoop_auth"
+  #     SASL_PROTECTION: "$sasl_protection"
+  #     TLS_ENCRYPTION: "$tls_encryption"
+  #   networks:
+  #     - docker-net
+  #   ports:
+  #     - "10000:10000" # jdbc
+  #     #- "5056:5056"  # jvm-debug
+  #   volumes:
+  #     - "$mount/conf:/mount/conf"
+  #     - "$mount/secrets:/mount/secrets"
+  #   depends_on:
+  #     - namenode
+  #     - resourcemanager
