Install MySQL connectors

--- a/images/hive/metastore/Dockerfile
+++ b/images/hive/metastore/Dockerfile
@@ -7,16 +7,18 @@ LABEL description="This image provides Apache Hive Metastore on Cloudera Hadoop 
 
 ENV HIVE_CONF_DIR=/etc/hive/conf
 
-RUN yum update -y \
-&&  yum install -y hive-metastore \
-&&  yum clean all
 
-COPY mysql-connector-java-8.0.17.jar /usr/lib/hive/lib/mysql-connector-java-8.0.17.jar
+RUN yum update -y \
+&&  yum install -y hive-metastore mysql-connector-java \
+&&  yum clean all \
+&&  ln -s /usr/share/java/mysql-connector-java.jar /usr/lib/hive/lib/mysql-connector-java.jar
+
+
 COPY hivemetastore-site.xml.j2       /etc/hive/conf/hivemetastore-site.xml.j2
 COPY entrypoint                      /etc/docker/entrypoint
 
 
-# ??? EXPOSE 10000/tcp
+EXPOSE 9083/tcp
 
 
 ENTRYPOINT ["/etc/docker/entrypoint"]
