--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ version: "3.7"
 
 
 volumes:
-  shared:
+  conf:
 
 
 networks:
@@ -27,13 +27,15 @@ services:
       - "4088:4088"
       - "4088:4088/udp"
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
 
 
   namenode:
     image: "$registry/$repository/hadoop-hdfs/namenode:$image_version"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
+      HADOOP_OPTS: "-Djava.security.krb5.conf=/conf/krb5.conf"
+      KRB5_CONFIG: "/conf/krb5.conf"
       SASL_PROTECTION: "$sasl_protection"
       TLS_ENCRYPTION: "$tls_encryption"
     hostname: "namenode.docker.net"
@@ -44,7 +46,7 @@ services:
       - "8020:8020"   # protobuf
       #- "5051:5051"  # jvm-debug
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - kdc
 
@@ -53,6 +55,8 @@ services:
     image: "$registry/$repository/hadoop-hdfs/datanode:$image_version"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
+      HADOOP_OPTS: "-Djava.security.krb5.conf=/conf/krb5.conf"
+      KRB5_CONFIG: "/conf/krb5.conf"
       SASL_PROTECTION: "$sasl_protection"
       TLS_ENCRYPTION: "$tls_encryption"
     privileged: true
@@ -67,7 +71,7 @@ services:
       - "1006:1006"   # http
       #- "5052:5052"  # jvm-debug
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - namenode
 
@@ -76,6 +80,8 @@ services:
     image: "$registry/$repository/hadoop-mapred/jobhistory:$image_version"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
+      HADOOP_OPTS: "-Djava.security.krb5.conf=/conf/krb5.conf"
+      KRB5_CONFIG: "/conf/krb5.conf"
       SASL_PROTECTION: "$sasl_protection"
       TLS_ENCRYPTION: "$tls_encryption"
     hostname: "jobhistory.docker.net"
@@ -86,7 +92,7 @@ services:
       - "10020:10020" # protobuf
       #- "5053:5053"  # jvm-debug
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - namenode
 
@@ -95,6 +101,8 @@ services:
     image: "$registry/$repository/hadoop-yarn/resourcemanager:$image_version"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
+      HADOOP_OPTS: "-Djava.security.krb5.conf=/conf/krb5.conf"
+      KRB5_CONFIG: "/conf/krb5.conf"
       SASL_PROTECTION: "$sasl_protection"
       TLS_ENCRYPTION: "$tls_encryption"
     hostname: "resourcemanager.docker.net"
@@ -106,7 +114,7 @@ services:
       - "8030:8030"   # protobuf
       #- "5054:5054"  # jvm-debug
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - namenode
       - jobhistory
@@ -116,6 +124,8 @@ services:
     image: "$registry/$repository/hadoop-yarn/nodemanager:$image_version"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
+      HADOOP_OPTS: "-Djava.security.krb5.conf=/conf/krb5.conf"
+      KRB5_CONFIG: "/conf/krb5.conf"
       SASL_PROTECTION: "$sasl_protection"
       TLS_ENCRYPTION: "$tls_encryption"
     hostname: "nodemanager1.docker.net"
@@ -128,7 +138,7 @@ services:
       - "4041:4040"   # http     (spark-ui)
       #- "5055:5055"  # jvm-debug
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - namenode
       - jobhistory
@@ -157,7 +167,7 @@ services:
     ports:
       - "9083:9083"   # thrift
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - mysql
 
@@ -167,6 +177,8 @@ services:
     hostname: "hiveserver2.docker.net"
     environment:
       HADOOP_AUTHENTICATION: "$hadoop_auth"
+      HADOOP_OPTS: "-Djava.security.krb5.conf=/conf/krb5.conf"
+      KRB5_CONFIG: "/conf/krb5.conf"
       SASL_PROTECTION: "$sasl_protection"
       TLS_ENCRYPTION: "$tls_encryption"
     networks:
@@ -175,7 +187,7 @@ services:
       - "10000:10000" # jdbc
       #- "5056:5056"  # jvm-debug
     volumes:
-      - "shared:/shared"
+      - "conf:/conf"
     depends_on:
       - namenode
       - resourcemanager
